// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`email templates render exactly (localization guard) > interview nudge 1`] = `
{
  "html": "<!doctype html>
<html><body style="margin:0;padding:0;background:#FBFAF7;">
<div style="max-width:560px;margin:0 auto;padding:32px 24px;font-family:Georgia,'Times New Roman',serif;color:#15243B;">
  <div style="font-size:22px;font-weight:600;margin-bottom:24px;">Get Camino <span style="color:#8A9BB0;font-size:14px;font-style:italic;">— your road to Spain</span></div>
  <p style="font-family:Helvetica,Arial,sans-serif;font-size:15px;line-height:24px;margin:0 0 16px;">Hola — Lola here.</p><p style="font-family:Helvetica,Arial,sans-serif;font-size:15px;line-height:24px;margin:0 0 16px;">You started telling me about your move to Spain, and I’d hate for that head start to go to waste. A few more answers and I can lay out your full roadmap — every step that applies to you, in the right order, with real deadlines.</p><div style="margin:24px 0;"><a href="https://getcamino.app/interview" style="display:inline-block;background:#2B5AA3;color:#FFFFFF;text-decoration:none;font-family:Helvetica,Arial,sans-serif;font-size:15px;font-weight:600;padding:12px 22px;border-radius:8px;">Pick up where you left off</a></div><p style="font-family:Helvetica,Arial,sans-serif;font-size:15px;line-height:24px;margin:0 0 16px;"><span style="font-size:13px;color:#4A5A70;">It usually takes two or three minutes. Your earlier answers are saved.</span></p>
  <hr style="border:none;border-top:1px solid #E8E4DC;margin:32px 0 16px;">
  <div style="font-family:Helvetica,Arial,sans-serif;font-size:12px;line-height:18px;color:#8A9BB0;">
    You’re getting this because you have a Get Camino roadmap. <a href="https://getcamino.app/api/email/unsubscribe?uid=fixed&sig=fixed" style="color:#8A9BB0;">Unsubscribe from the weekly roundup</a>.
    <br>Guidance only — not legal or tax advice.
  </div>
</div>
</body></html>",
  "subject": "Your Spain roadmap is waiting — a few questions to go",
  "text": "Hola — Lola here.

You started telling me about your move to Spain. A few more answers and I can lay out your full roadmap.

Pick up where you left off: https://getcamino.app/interview",
}
`;

exports[`email templates render exactly (localization guard) > weekly roundup 1`] = `
{
  "html": "<!doctype html>
<html><body style="margin:0;padding:0;background:#FBFAF7;">
<div style="max-width:560px;margin:0 auto;padding:32px 24px;font-family:Georgia,'Times New Roman',serif;color:#15243B;">
  <div style="font-size:22px;font-weight:600;margin-bottom:24px;">Get Camino <span style="color:#8A9BB0;font-size:14px;font-style:italic;">— your road to Spain</span></div>
  <p style="font-family:Helvetica,Arial,sans-serif;font-size:15px;line-height:24px;margin:0 0 16px;">Hola — here’s where your road to Spain stands this week.</p><div style="font-family:Helvetica,Arial,sans-serif;font-size:12px;font-weight:700;letter-spacing:2px;color:#C0392B;margin:24px 0 12px;">SLIPPED PAST</div><div style="margin:0 0 18px;padding:14px 16px;background:#FFFFFF;border:1px solid #E8E4DC;border-radius:10px;">
    <div style="font-family:Helvetica,Arial,sans-serif;font-size:15px;font-weight:600;line-height:22px;"><span style="font-family:Helvetica,Arial,sans-serif;font-size:11px;font-weight:700;letter-spacing:1px;color:#C0392B;background:#FBEFED;border:1px solid #C0392B;border-radius:4px;padding:2px 6px;">OVERDUE</span> Register at your town hall (empadronamiento)</div>
    <div style="font-family:Helvetica,Arial,sans-serif;font-size:13px;line-height:20px;margin-top:4px;"><span style="color:#C0392B;">was due 12 Jun</span> &nbsp;·&nbsp; <a href="https://example.gob.es/empadronamiento" style="color:#2B5AA3;">official source ↗</a></div>
    <div style="font-family:Helvetica,Arial,sans-serif;font-size:13px;line-height:20px;color:#4A5A70;margin-top:6px;">Book the cita previa now — appointment slots are the real bottleneck, not the paperwork.</div>
  </div><p style="font-family:Helvetica,Arial,sans-serif;font-size:15px;line-height:24px;margin:0 0 16px;"><span style="font-size:13px;color:#4A5A70;">Already done one of these? Mark it done with the real date and your plan re-flows. Plans changed? Tell me what happened and I’ll remodel the roadmap.</span></p><div style="font-family:Helvetica,Arial,sans-serif;font-size:12px;font-weight:700;letter-spacing:2px;color:#BD8318;margin:24px 0 12px;">COMING UP</div><div style="margin:0 0 18px;padding:14px 16px;background:#FFFFFF;border:1px solid #E8E4DC;border-radius:10px;">
    <div style="font-family:Helvetica,Arial,sans-serif;font-size:15px;font-weight:600;line-height:22px;">Get your NIE (foreigner identification number)</div>
    <div style="font-family:Helvetica,Arial,sans-serif;font-size:13px;line-height:20px;margin-top:4px;"><span style="color:#8A9BB0;">due 28 Jul</span> &nbsp;·&nbsp; <a href="https://example.gob.es/nie" style="color:#2B5AA3;">official source ↗</a></div>
    <div style="font-family:Helvetica,Arial,sans-serif;font-size:13px;line-height:20px;color:#4A5A70;margin-top:6px;">Book the cita previa now — appointment slots are the real bottleneck, not the paperwork.</div>
  </div><div style="margin:0 0 18px;padding:14px 16px;background:#FFFFFF;border:1px solid #E8E4DC;border-radius:10px;">
    <div style="font-family:Helvetica,Arial,sans-serif;font-size:15px;font-weight:600;line-height:22px;">Declare foreign assets (Modelo 720)</div>
    <div style="font-family:Helvetica,Arial,sans-serif;font-size:13px;line-height:20px;margin-top:4px;"><span style="color:#8A9BB0;">due 30 Jul</span></div>
    <div style="font-family:Helvetica,Arial,sans-serif;font-size:13px;line-height:20px;color:#4A5A70;margin-top:6px;">If in doubt, a gestor can prepare this in a day — cheap insurance against a mis-filing.</div>
  </div><p style="font-family:Helvetica,Arial,sans-serif;font-size:15px;line-height:24px;margin:0 0 16px;"><span style="color:#8A9BB0;">…and 2 more after these — one step at a time.</span></p><div style="margin:24px 0;"><a href="https://getcamino.app/plan" style="display:inline-block;background:#2B5AA3;color:#FFFFFF;text-decoration:none;font-family:Helvetica,Arial,sans-serif;font-size:15px;font-weight:600;padding:12px 22px;border-radius:8px;">Open your full roadmap</a></div>
  <hr style="border:none;border-top:1px solid #E8E4DC;margin:32px 0 16px;">
  <div style="font-family:Helvetica,Arial,sans-serif;font-size:12px;line-height:18px;color:#8A9BB0;">
    You’re getting this because you have a Get Camino roadmap. <a href="https://getcamino.app/api/email/unsubscribe?uid=fixed&sig=fixed" style="color:#8A9BB0;">Unsubscribe from the weekly roundup</a>.
    <br>Guidance only — not legal or tax advice.
  </div>
</div>
</body></html>",
  "subject": "Your Get Camino week: 1 overdue, 2 coming up",
  "text": "Hola — here’s where your road to Spain stands this week.
[OVERDUE] Register at your town hall (empadronamiento) — was due 12 Jun
  official source: https://example.gob.es/empadronamiento
  tip: Book the cita previa now — appointment slots are the real bottleneck, not the paperwork.
Get your NIE (foreigner identification number) — due 28 Jul
  official source: https://example.gob.es/nie
  tip: Book the cita previa now — appointment slots are the real bottleneck, not the paperwork.
Declare foreign assets (Modelo 720) — due 30 Jul
  tip: If in doubt, a gestor can prepare this in a day — cheap insurance against a mis-filing.
…and 2 more after these.
Open your full roadmap: https://getcamino.app/plan",
}
`;

exports[`email templates render exactly (localization guard) > welcome 1`] = `
{
  "html": "<!doctype html>
<html><body style="margin:0;padding:0;background:#FBFAF7;">
<div style="max-width:560px;margin:0 auto;padding:32px 24px;font-family:Georgia,'Times New Roman',serif;color:#15243B;">
  <div style="font-size:22px;font-weight:600;margin-bottom:24px;">Get Camino <span style="color:#8A9BB0;font-size:14px;font-style:italic;">— your road to Spain</span></div>
  <p style="font-family:Helvetica,Arial,sans-serif;font-size:15px;line-height:24px;margin:0 0 16px;">Hola — I’m Lola.</p><p style="font-family:Helvetica,Arial,sans-serif;font-size:15px;line-height:24px;margin:0 0 16px;">Get Camino turns your move to Spain into a step-by-step roadmap: every visa, form and deadline that applies to <em>your</em> situation, in the right order, each one backed by an official source.</p><p style="font-family:Helvetica,Arial,sans-serif;font-size:15px;line-height:24px;margin:0 0 16px;">Your roadmap lives here — it updates as your plans change, and I’ll coach you through any step you tap:</p><div style="margin:24px 0;"><a href="https://getcamino.app/plan" style="display:inline-block;background:#2B5AA3;color:#FFFFFF;text-decoration:none;font-family:Helvetica,Arial,sans-serif;font-size:15px;font-weight:600;padding:12px 22px;border-radius:8px;">Open your roadmap</a></div><p style="font-family:Helvetica,Arial,sans-serif;font-size:15px;line-height:24px;margin:0 0 16px;">While your move is underway I’ll send a short weekly roundup — what’s coming up, what’s slipped, never more than a handful of tasks.</p>
  <hr style="border:none;border-top:1px solid #E8E4DC;margin:32px 0 16px;">
  <div style="font-family:Helvetica,Arial,sans-serif;font-size:12px;line-height:18px;color:#8A9BB0;">
    You’re getting this because you have a Get Camino roadmap. <a href="https://getcamino.app/api/email/unsubscribe?uid=fixed&sig=fixed" style="color:#8A9BB0;">Unsubscribe from the weekly roundup</a>.
    <br>Guidance only — not legal or tax advice.
  </div>
</div>
</body></html>",
  "subject": "Welcome to Get Camino — your road to Spain starts here",
  "text": "Hola — I’m Lola.

Get Camino turns your move to Spain into a step-by-step roadmap: every visa, form and deadline that applies to your situation, in the right order, backed by official sources.

Open your roadmap: https://getcamino.app/plan

While your move is underway I’ll send a short weekly roundup — never more than a handful of tasks.",
}
`;

exports[`printable report renders exactly (localization guard) > full report HTML 1`] = `
"<!doctype html>
<html><head><meta charset="utf-8"><title>Get Camino — your road to Spain</title>
<style>@page { margin: 18mm 15mm; } body { margin: 0; }</style></head>
<body style="background:#FBFAF7;font-family:Georgia,'Times New Roman',serif;color:#15243B;">
<!-- Container padding is the margin fallback: iOS's HTML→PDF renderer ignores @page
     (build-25 QA finding: zero print margins), so the page must carry its own. -->
<div style="max-width:720px;margin:0 auto;padding:28px 24px;font-family:Helvetica,Arial,sans-serif;">

  <div style="display:flex;justify-content:space-between;align-items:baseline;border-bottom:2px solid #15243B;padding-bottom:10px;">
    <div style="font-family:Georgia,serif;font-size:22px;font-weight:600;">Get Camino <span style="font-size:12px;color:#4A5A70;font-style:italic;">— your road to Spain</span></div>
    <div style="font-size:10px;color:#4A5A70;">Generated 3 Jul 2026</div>
  </div>

  <div style="display:flex;gap:18px;margin-top:12px;font-size:11px;color:#4A5A70;">
    <span><b style="color:#15243B;font-size:14px;">4</b> steps</span>
    <span><b style="color:#2B5AA3;font-size:14px;">4</b> required</span>
    <span><b style="color:#5E7355;font-size:14px;">1</b> done</span>
    <span><b style="color:#C0392B;font-size:14px;">1</b> overdue</span>
  </div>

  <div style="page-break-inside:avoid;background:#FFFFFF;border:2px solid #BD8318;border-radius:10px;padding:14px 16px;margin:18px 0 6px;">
      <div style="font-size:9px;letter-spacing:2px;color:#BD8318;font-weight:700;margin-bottom:6px;">YOUR NEXT STEP</div>
      <div style="font-size:15px;line-height:20px;color:#15243B;font-weight:600;">Title of hero-step</div>
      <div style="font-size:11px;margin-top:4px;color:#15243B;font-weight:600;">Due 13 Jul 2026 (estimated)</div>
    </div>

  
  <div style="margin-top:20px;">
    <div style="font-size:10px;letter-spacing:2px;color:#4A5A70;font-weight:700;border-bottom:1px solid #15243B;padding-bottom:4px;">FIRST WEEKS · 4</div>
    <div style="page-break-inside:avoid;padding:8px 0 8px 12px;border-left:3px solid #2B5AA3;border-bottom:1px solid #D8D2C8;">
    <div style="font-size:12px;line-height:16px;color:#15243B;">Title of hero-step</div>
    <div style="font-size:10px;line-height:15px;margin-top:2px;">
      <span style="color:#15243B;font-weight:600;">Due 13 Jul 2026 (estimated)</span>
      <span style="color:#4A5A70;"> · Required · official requirement</span>
    </div>
    <div style="font-size:10px;color:#5B6B80;margin-top:2px;word-break:break-all;">Official source: https://example.gob.es/tramite</div>
  </div><div style="page-break-inside:avoid;padding:8px 0 8px 12px;border-left:3px solid #2B5AA3;border-bottom:1px solid #D8D2C8;">
    <div style="font-size:12px;line-height:16px;color:#15243B;">Title of overdue-step</div>
    <div style="font-size:10px;line-height:15px;margin-top:2px;">
      <span style="color:#C0392B;font-weight:600;">Overdue · was due 1 Jul 2026</span>
      <span style="color:#4A5A70;"> · Required · official requirement</span>
    </div>
    <div style="font-size:10px;color:#5B6B80;margin-top:2px;word-break:break-all;">Official source: https://example.gob.es/tramite</div>
  </div><div style="page-break-inside:avoid;padding:8px 0 8px 12px;border-left:3px solid #2B5AA3;border-bottom:1px solid #D8D2C8;">
    <div style="font-size:12px;line-height:16px;color:#15243B;">Title of anchored-step</div>
    <div style="font-size:10px;line-height:15px;margin-top:2px;">
      <span style="color:#4A5A70;font-weight:600;">Starts once your residency is established</span>
      <span style="color:#4A5A70;"> · Required · official requirement</span>
    </div>
    <div style="font-size:10px;color:#5B6B80;margin-top:2px;word-break:break-all;">Official source: https://example.gob.es/tramite</div>
  </div><div style="page-break-inside:avoid;padding:8px 0 8px 12px;border-left:3px solid #5E7355;border-bottom:1px solid #D8D2C8;">
    <div style="font-size:12px;line-height:16px;color:#5E7355;text-decoration:line-through;text-decoration-thickness:1px;">✓ Title of done-step</div>
    <div style="font-size:10px;line-height:15px;margin-top:2px;">
      <span style="color:#5E7355;font-weight:600;">Done · 2 Jul 2026</span>
      <span style="color:#4A5A70;"> · Required · official requirement</span>
    </div>
    <div style="font-size:10px;color:#5B6B80;margin-top:2px;word-break:break-all;">Official source: https://example.gob.es/tramite</div>
  </div>
  </div>

  <div style="margin-top:24px;padding-top:10px;border-top:1px solid #D8D2C8;font-size:10px;line-height:15px;color:#5B6B80;">
    Estimated dates sharpen as real dates are confirmed; steps without dates begin once their milestone happens — Get Camino never invents a deadline.
    <br>Made with Get Camino (getcamino.app). Guidance only — not legal or tax advice; a gestor signs the papers.
  </div>
</div>
</body></html>"
`;
